Finished the project

--- a/style.css
+++ b/style.css
@@ -1,18 +1,32 @@
-@font-face {
-  font-family: Bebas-Kai;
-  src: url("fonts/bebas_kai/BebasKai.otf") format("otf"),
-       url("fonts/bebas_kai/BebasKai.ttf") format("ttf"),
-       url("fonts/bebas_kai/BebasKai.woff") format("woff"),
-       url("fonts/bebas_kai/BebasKai.woff2") format("woff2");
-}
-
-
 body{
   overflow: hidden;
   box-sizing: border-box;
-  width: 100vw;
-  height: 110vh;
   margin: 0;
+}
+
+h1{
+  padding: 1.7rem;
+  color: rgb(255, 255, 255);
+  font-size: 1.7em;
+  font-family: 'Alien', sans-serif;
+  font-weight: bold;
+}
+
+h2{
+  margin-left: 2rem;
+  color: rgb(255, 255, 255);
+  font-size: 1.5em;
+  font-family: 'Alien', sans-serif;
+}
+
+p{
+  margin-left: 2rem;
+  margin-right: 2rem;
+  font-size: 1.2em;
+}
+
+em{
+  font-weight: bold;
 }
 
 main{
@@ -28,25 +42,44 @@ header{
   width: 100vw;
   height: 5rem;
   background-color: rgb(0, 0, 145);
-  font-family: Bebas-Kai, sans-serif;
-  font-size: 1rem;
   text-align: center;
-  color: rgb(255, 255, 255);
-}
-
-header h1{
-  padding: 1.75rem;
-
-}
-
-section{
-  align-items: center;
-  font-size: 1.2em;
-  color: rgb(255, 255, 255);
 }
 
 article{
-  padding: 1rem;
+  align-items: center;
+  color: rgb(255, 255, 255);
+}
+
+section{
+  margin: 1rem;
+}
+
+ul{
+  list-style: none;
+}
+
+a{
+  color: rgb(255, 255, 255);
+  font-family: Verdana, sans-serif;
+}
+
+a:hover{
+  color: rgb(0, 105, 35);
+}
+
+.tooltip{
+  visibility: hidden;
+  padding: 0.1rem;
+  border-radius: 0.75rem;
+  background-color: rgb(0, 105, 35);
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
+  font-family: 'Alien';
+  font-style: italic;
+}
+
+a:hover .tooltip{
+  visibility: visible;
 }
 
 #content{
@@ -57,11 +90,10 @@ article{
   height: 85vh;
   left: 15%;
   right: 15%;
-  background-image: linear-gradient(rgb(0, 0, 145), rgb(145, 0, 0));
-
+  background-image: linear-gradient(rgb(0, 0, 65), rgb(0, 60, 10));
 }
 
-#content article img{
+#content section img{
   width: 100%;
 }
 
@@ -70,19 +102,23 @@ footer{
   overflow: hidden;
   width: 100vw;
   height: 5rem;
-  background-color: rgb(145, 0, 0);
-  font-family: Bebas-Kai, sans-serif;
-  font-size: 1rem;
-  text-align: center;
+  background-color: rgb(0, 140, 40);
   color: rgb(255, 255, 255);
+  text-align: center;
 }
 
-#ftr-left{
+#footer-left{
   flex: 1;
   width: 50vw;
-
+  margin: 0em;
 }
 
-#ftr-right{
+#footer-right{
   width: 50vw;
+  margin: 0em;
+}
+
+#footer-right p, #footer-left p{
+  font-size: 1em;
+  font-weight: bold;
 }
